restore spark component

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,7 +11,7 @@
 }
 
 body {
-  /* cursor: crosshair; */
+  cursor: crosshair;
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
       to bottom,
