--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,21 +4,43 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 250, 250, 250;
-  --background-start-rgb: 8, 1, 33;
-  --background-end-rgb: 26, 20, 48;
+@layer base {
+  :root {
+    --foreground-rgb: 250, 250, 250;
+    --background-start-rgb: 8, 1, 33;
+    --background-end-rgb: 26, 20, 48;
+  }
+
+  body {
+    cursor: crosshair;
+    color: rgb(var(--foreground-rgb));
+    background: linear-gradient(
+        to bottom,
+        transparent,
+        rgb(var(--background-end-rgb))
+      )
+      rgb(var(--background-start-rgb));
+  }
 }
 
-body {
-  cursor: crosshair;
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+@layer components {
+  @keyframes spin-slow {
+    from {
+      transform: rotate(0deg);
+    }
+    to {
+      transform: rotate(360deg);
+    }
+  }
+
+  .vinyl-spin {
+    animation: spin-slow 4s linear infinite;
+  }
+
+  /* scrollbar */
+  ::-webkit-scrollbar {
+    opacity: 0;
+  }
 }
 
 @layer utilities {
